# AndroidApkCreatorScript

./: README.md  run.sh
code/: AndroidManifest.xml  main.cpp  main.hpp
version1/: run.sh
version2/android-cmake-demo/: CMakeLists.txt  adbdebug.sh  install.txt  main.cpp  main.qml  monitor.cpp  monitor.hpp  qml.qrc  run.sh  run_arm.sh  run_x86.sh  ui_widget.h  widget.cpp  widget.hpp
version2/android-cmake-demo/cmake/: qt-android-deployment.json.in  qt-android-mk-apk.cmake
